tests/errors/err_str_to_float_param.mix
// ERROR: expected float, got str
f(x: float) -> float
    x * 2.0

main()
    print(f("hello"))
